fix compilation with shade + fix conflict w_ytd type in warehouse entities